# CrossPlatformServer

./: CMakeLists.txt
DummyClient/: CMakeLists.txt
DummyClient/include/: ServerSession.hpp
DummyClient/src/: ServerSession.cpp  main.cpp
MonitoringServer/: CMakeLists.txt
Server/: CMakeLists.txt
Server/include/: ClientSession.hpp
Server/src/: ClientSession.cpp  main.cpp
ServerCore/include/: Acceptor.hpp  Allocator.hpp  Common.hpp  Enums.hpp  Global.hpp  LinuxEpollNetwork.hpp  Lock.hpp  MemoryPool.hpp  NetworkAddress.hpp  NetworkInterface.hpp  NetworkUtils.hpp  Packet.hpp  Platform.hpp  SendBuffer.hpp  SendBufferPool.hpp  ServerCore.hpp  Session.hpp  StreamBuffer.hpp  ThreadLocal.hpp  ThreadManager.hpp  Types.hpp  WindowsIocpNetwork.hpp
ServerCore/src/: Acceptor.cpp  Allocator.cpp  Global.cpp  LinuxEpollNetwork.cpp  Lock.cpp  MemoryPool.cpp  NetworkAddress.cpp  NetworkInterface.cpp  NetworkUtils.cpp  SendBufferPool.cpp  ServerCore.cpp  Session.cpp  StreamBuffer.cpp  ThreadLocal.cpp  ThreadManager.cpp  WindowsIocpNetwork.cpp
